set_mode_flags isn't called without -Xmixed specified

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • hs21
    • Affects Version/s: hs21
    • Component/s: hotspot
    • None
    • b12
    • x86
    • solaris_10
    • Not verified

        The fix 7034513 moved some logic into set_mode_flags but set_mode_flags isn't called unless a mode is specified on the command line. The fix simply to call set_mode_flag(_mixed) before parsing arguments.

              Assignee:
              Tom Rodriguez
              Reporter:
              Tom Rodriguez
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: