7041582: set_mode_flags isn't called without -Xmixed specified

Reviewed-by: kvn, iveresov